# PulseOBS

./: .gitignore  CMakeLists.txt  CMakePresets.json  CoAuthor.txt  LICENSE  Makefile  README.md  buildspec.json  dockerfile
.github/: build-opencv-macos.py
.github/scripts/: .Aptfile  .Brewfile  .Wingetfile  .build.zsh  Build-Windows.ps1  Package-Windows.ps1  build-macos  build-ubuntu
.github/scripts/utils.pwsh/: Install-BuildDependencies.ps1
.github/scripts/utils.zsh/: check_macos  check_ubuntu
.github/workflows/: build-project.yaml  pr-pull.yaml  push-branch.yaml  push-plugin.yaml  push.yaml
binary/opencv-4.11.0-windows/: OpenCVConfig.cmake  setup_vars_opencv4.cmd
binary/opencv-4.11.0-windows-1/x64/vc17/lib/: opencv_calib3d4110.lib  opencv_dnn4110.lib  opencv_features2d4110.lib  opencv_imgcodecs4110.lib  opencv_ml4110.lib  opencv_objdetect4110.lib  opencv_photo4110.lib  opencv_stitching4110.lib  opencv_video4110.lib
binary/opencv-4.11.0-windows/include/opencv2/: cvconfig.h
binary/opencv-4.11.0-windows/x64/vc17/lib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_core4110.lib  opencv_flann4110.lib  opencv_highgui4110.lib  opencv_imgproc4110.lib  opencv_videoio4110.lib
binary/opencv-4.11.0-windows/x64/vc17/staticlib/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  opencv_highgui4110.lib  opencv_imgcodecs4110.lib  opencv_ml4110.lib  opencv_photo4110.lib  opencv_stitching4110.lib  opencv_video4110.lib  opencv_videoio4110.lib  zlib.lib
build-aux/: .run-format.zsh
cmake/common/: helpers_common.cmake
data/: test.effect
plugin/: OBSPlugin.cpp
scripts/: fix_format.sh  source_files.sh
src/: heart_rate_source.cpp  heart_rate_source.h  heart_rate_source_info.c  heart_rate_source_info.h  heart_rate_widget.cpp  heart_rate_widget.hpp  plugin-main.c  plugin-main.cpp  pulse.cpp  pulse.hpp
src/algorithm/: FaceDetection.cpp  FaceDetection.h  HeartRateAlgorithm.cpp  HeartRateAlgorithm.h  patches-face-detection.cpp  patches-face-detection.h
src/plugin/: OBSPlugin.cpp  plugin-main.cpp
tools/: build_opencv_for_macos.py
